# zomboid-modpack-manager

./: .env.example  .gitignore  LICENSE  README.md  __main__.py  cli.py  make_exe.cmd  pyproject.toml
app/: config.py  google_drive.py  loader.py  main.py  models.py
app/cli/: commands.py
app/core/: manager.py  manifest.py  models.py  updater.py  utils.py
app/core/utils/: google_drive.py  utils.py
src/: app.py  config.py  config_loader.py  loader.py  manifest.py  models.py  network.py  updater.py  uploader.py  utils.py
src/app/: loader.py
src/cli/: main.py
