[project]
name = "zomboid-mods-updater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "checksumdir>=1.3.0",
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
]
